# PORR_particle_swarm_optimization_in_OpenMP

./: .gitignore  CMakeLists.txt  OPENACC_NOTES.txt  README.md  animation.cpp  compile.sh  hello_matplot_lib.cpp  plot_test_func1.cpp  plot_test_func2.cpp  surface2.cpp  test_functions.hpp  test_openacc.cpp  test_random_search_acc.cpp
doc/: dokumentacja.odt
include/: abstract_n_dimensional_space_search.hpp  plots.hpp  random_search.hpp  swarm_search.hpp  test_functions.hpp  utilities.hpp
src/: main.cpp  plot_test_func1.cpp  plot_test_func2.cpp  plots.cpp  random_search.cpp  swarm_search.cpp  test_functions.cpp  utilities.cpp
src/programs/: main.cpp  plotter.cpp  runner.cpp  test_func1_2d_colormap.cpp  test_func1_3d_plot.cpp  test_func2_3d_plot.cpp
test_scripts/: test_parallelism_full.sh
